--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ fastapi>=0.104.1
 uvicorn>=0.24.0
 requests>=2.31.0
 beautifulsoup4>=4.12.2
-python-multipart>=0.0.6
-mangum>=0.17.0  # Vercel适配ASGI必需
+mangum>=0.17.0
+jinja2>=3.1.2  # 模板引擎（前端页面需要）
